--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -43,6 +43,7 @@ target_link_libraries(dump
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
+  ${CHAINER_COMPILER_SNPE_LIBRARIES}
   ${OpenCV_LIBS}
   absl::variant
   absl::optional
@@ -74,6 +75,7 @@ target_link_libraries(run_onnx
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
+  ${CHAINER_COMPILER_SNPE_LIBRARIES}
   absl::variant
   absl::optional
   )
@@ -111,6 +113,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     ${CHAINER_COMPILER_DLDT_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
+    ${CHAINER_COMPILER_SNPE_LIBRARIES}
     ${OpenCV_LIBS}
     absl::variant
     absl::optional
@@ -141,6 +144,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     ${CHAINER_COMPILER_DLDT_LIBRARIES}
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
+    ${CHAINER_COMPILER_SNPE_LIBRARIES}
     absl::variant
     absl::optional
     )
@@ -171,6 +175,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       ${CHAINER_COMPILER_DLDT_LIBRARIES}
       ${CHAINER_COMPILER_TVM_LIBRARIES}
       ${CHAINER_COMPILER_CUDA_LIBRARIES}
+      ${CHAINER_COMPILER_SNPE_LIBRARIES}
       ${OpenCV_LIBS}
       absl::variant
       absl::optional
