--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -10,7 +10,7 @@ endif()
 add_definitions(-DCHAINER_COMPILER_DLDT_DIR=\"${CHAINER_COMPILER_DLDT_DIR}\")
 
 if(MSVC)
-    find_package(PythonInterp 3)
+  find_package(PythonInterp 3)
 endif()
 
 add_custom_command(
@@ -177,7 +177,6 @@ target_link_libraries(chainer_compiler_compiler_test
   ${PROTOBUF_LIBRARY}
   gtest
   gtest_main
-  pthread
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -185,6 +184,12 @@ target_link_libraries(chainer_compiler_compiler_test
   absl::variant
   absl::optional
   )
+
+if (!WIN32)
+  target_link_libraries(chainer_compiler_compiler_test
+  pthread
+  )
+endif()
 
 add_test(
   NAME chainer_compiler_compiler_test
