--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -269,11 +269,11 @@ add_subdirectory(scripts)
 add_subdirectory(tools)
 
 if(WIN32)
-  set(RM_RF rd\ /s\ /q)
+  set(RM_RF rd /s /q)
   set(ENV_SET set)
   set(TOUCH echo.>)
 else()
-  set(RM_RF rm\ -rf)
+  set(RM_RF rm -rf)
   set(ENV_SET )
   set(TOUCH touch)
 endif()
