--- a/scripts/CMakeLists.txt
+++ b/scripts/CMakeLists.txt
@@ -4,7 +4,7 @@ set(CHAINER_COMPILER_TOOLS_DIR ${CHAINER_COMPILER_ROOT_DIR}/tools)
 function(gen_onnx_by_onnx_chainer_ name_)
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${name_}_stamp
-  COMMAND PYTHONPATH=third_party/onnx-chainer python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_${name_}.py && touch ${CMAKE_CURRENT_BINARY_DIR}/${name_}_stamp
+  COMMAND ${ENV_SET} PYTHONPATH=third_party/onnx-chainer ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen_${name_}.py && ${TOUCH} ${CMAKE_CURRENT_BINARY_DIR}/${name_}_stamp
   MAIN_DEPENDENCY gen_${name_}.py
   DEPENDS ${ONNX_CHAINER_DEPS}
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
@@ -18,7 +18,7 @@ gen_onnx_by_onnx_chainer_(chainercv_model_tests)
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/backprop_tests_pc_stamp
-  COMMAND PYTHONPATH=${CHAINER_COMPILER_ROOT_DIR} python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_pc.py && touch ${CMAKE_CURRENT_BINARY_DIR}/backprop_tests_pc_stamp > /dev/null
+  COMMAND ${ENV_SET} PYTHONPATH=${CHAINER_COMPILER_ROOT_DIR} ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen_backprop_tests_pc.py && ${TOUCH} ${CMAKE_CURRENT_BINARY_DIR}/backprop_tests_pc_stamp > /dev/null
   MAIN_DEPENDENCY gen_backprop_tests_pc.py
   DEPENDS ${ONNX_CHAINER_DEPS} ${CH2O_FILES}
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
@@ -26,7 +26,7 @@ add_custom_command(
 
 add_custom_command(
   OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/extra_test_stamp
-  COMMAND PYTHONPATH=${CHAINER_COMPILER_ROOT_DIR} python3 ${CMAKE_CURRENT_SOURCE_DIR}/gen_extra_test.py && touch ${CMAKE_CURRENT_BINARY_DIR}/extra_test_stamp > /dev/null
+  COMMAND ${ENV_SET} PYTHONPATH=${CHAINER_COMPILER_ROOT_DIR} ${PYTHON_EXECUTABLE} ${CMAKE_CURRENT_SOURCE_DIR}/gen_extra_test.py && ${TOUCH} ${CMAKE_CURRENT_BINARY_DIR}/extra_test_stamp > /dev/null
   MAIN_DEPENDENCY gen_extra_test.py
   DEPENDS onnx_script.py sentiment.py gen_chainercv_op_tests.py chainercv_rpn.py
   WORKING_DIRECTORY ${CHAINER_COMPILER_ROOT_DIR}
