Define CHAINER_COMPILER_PTHREAD_LIBRARIES
in the toplevel CMakeLists.txt.

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -184,6 +184,7 @@ target_link_libraries(chainer_compiler_compiler_test
   ${PROTOBUF_LIBRARY}
   gtest
   gtest_main
+  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -191,12 +192,6 @@ target_link_libraries(chainer_compiler_compiler_test
   absl::variant
   absl::optional
   )
-
-if (!WIN32)
-  target_link_libraries(chainer_compiler_compiler_test
-  pthread
-  )
-endif()
 
 add_test(
   NAME chainer_compiler_compiler_test
