--- a/menoh/CMakeLists.txt
+++ b/menoh/CMakeLists.txt
@@ -29,6 +29,7 @@ target_link_libraries(menoh_chainer_compiler
   onnx
   onnx_proto
   ${PROTOBUF_LIBRARY}
+  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_LIBRARIES}
@@ -36,12 +37,6 @@ target_link_libraries(menoh_chainer_compiler
   absl::variant
   absl::optional
   )
-
-if (!WIN32)
-  target_link_libraries(menoh_chainer_compiler
-  pthread
-  )
-endif()
 
 if(OpenCV_FOUND)
     add_custom_command(
@@ -65,4 +60,3 @@ if(OpenCV_FOUND)
     )
     target_link_libraries(menoh_example PRIVATE menoh_chainer_compiler "${OpenCV_LIBRARIES}")
 endif()
-
