--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,6 +86,8 @@ if(MSVC)
     add_compile_options(/wd4125) # for protobuf
     add_compile_options(/wd4127) # for protobuf
     add_compile_options(/wd4244) # for protobuf
+
+    set(CHAINER_COMPILER_PTHREAD_LIBRARIES )
 else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fPIC")
@@ -94,6 +96,7 @@ else()
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-trigraphs")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-sign-compare")
     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-parameter")
+    set(CHAINER_COMPILER_PTHREAD_LIBRARIES pthread)
 endif()
 
 set(CMAKE_CXX_STANDARD 14)
