--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -89,6 +89,7 @@ target_link_libraries(chainer_compiler_runtime_test
   ${PROTOBUF_LIBRARY}
   gtest
   gtest_main
+  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
   ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
   ${CHAINER_COMPILER_DLDT_LIBRARIES}
   ${CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES}
@@ -96,12 +97,6 @@ target_link_libraries(chainer_compiler_runtime_test
   absl::variant
   absl::optional
   )
-
-if (!WIN32)
-  target_link_libraries(chainer_compiler_runtime_test
-  pthread
-  )
-endif()
 
 add_test(
   NAME chainer_compiler_runtime_test
