Use ONNX data in repository

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -126,30 +126,6 @@ else()
   set(WGET wget --continue)
 endif()
 
-# Download and extract test data
-add_custom_command(
-  OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/../data/mnist/model.onnx"
-  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/.."
-  COMMAND
-  mkdir ${MKDIR_P} data ${MKDIR_IGNORE} && cd data &&
-  ${WGET} https://www.cntk.ai/OnnxModels/mnist/opset_7/mnist.tar.gz &&
-  tar -xvzf mnist.tar.gz
-  )
-add_custom_command(
-  OUTPUT "${CMAKE_CURRENT_SOURCE_DIR}/../data/resnet50/model.onnx"
-  WORKING_DIRECTORY "${CMAKE_CURRENT_SOURCE_DIR}/.."
-  COMMAND
-  mkdir ${MKDIR_P} data ${MKDIR_IGNORE} && cd data &&
-  ${WGET} https://s3.amazonaws.com/download.onnx/models/opset_8/resnet50.tar.gz &&
-  tar -xvzf resnet50.tar.gz
-  )
-add_custom_target(
-  test_models
-  DEPENDS
-  "${CMAKE_CURRENT_SOURCE_DIR}/../data/mnist/model.onnx"
-  "${CMAKE_CURRENT_SOURCE_DIR}/../data/resnet50/model.onnx"
-  )
-
 include_directories(${GOOGLETEST_INCLUDE_DIRS})
 add_executable(chainer_compiler_compiler_test
   code_emitter_test.cc
@@ -171,7 +147,7 @@ add_executable(chainer_compiler_compiler_test
 add_dependencies(
   chainer_compiler_compiler_test
   runtime_chxvm_pb_h compiler_chxvm_codegen_h gen_node_base_h compiler_flags_h
-  gen_onnx_proto test_models
+  gen_onnx_proto
   )
 target_link_libraries(chainer_compiler_compiler_test
   chainer_compiler_compiler
