Move emitter for simple node to another file

--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -107,6 +107,7 @@ add_library(chainer_compiler_compiler
   value.cc
   chxvm/chxvm_value.cc
   chxvm/emitter.cc
+  chxvm/simple_node_emitter.cc
   chxvm/value_id_manager.cc
   )
 add_dependencies(
