fix filename in CMakeLists

--- a/menoh/CMakeLists.txt
+++ b/menoh/CMakeLists.txt
@@ -21,7 +21,7 @@ add_custom_target(
   "${CMAKE_CURRENT_BINARY_DIR}/args_json.inc"
   "${CMAKE_CURRENT_BINARY_DIR}/json_args.inc"
   )
-add_library(menoh_chainer_compiler SHARED menoh_chainer_compiler.cpp menoh.h)
+add_library(menoh_chainer_compiler SHARED menoh_chainer_compiler.cc menoh.h)
 add_dependencies(menoh_chainer_compiler menoh_chainer_compiler_cc_inc)
 target_include_directories(menoh_chainer_compiler PRIVATE
   "${CHAINER_COMPILER_ROOT_DIR}/third_party/json/include"
@@ -62,7 +62,7 @@ if(OpenCV_FOUND)
       menoh_example_default_config_json
       DEPENDS "${CMAKE_CURRENT_BINARY_DIR}/menoh_example_default_config.json"
       )
-    add_executable(menoh_example menoh_example.cpp)
+    add_executable(menoh_example menoh_example.cc)
     add_dependencies(menoh_example menoh_example_default_config_json)
     target_include_directories(menoh_example PRIVATE
       "${CHAINER_COMPILER_ROOT_DIR}/third_party/json/include"
@@ -72,7 +72,7 @@ if(OpenCV_FOUND)
     target_link_libraries(menoh_example PRIVATE menoh_chainer_compiler "${OpenCV_LIBRARIES}")
 endif()
 
-add_executable(run_onnx_menoh run_onnx.cpp)
+add_executable(run_onnx_menoh run_onnx.cc)
 target_include_directories(run_onnx_menoh PRIVATE
   "${CHAINER_COMPILER_ROOT_DIR}/third_party/json/include"
   "${CHAINER_COMPILER_ROOT_DIR}"
