Add a CMake flag to enable TensorRT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -57,6 +57,7 @@ set_option_(CHAINER_COMPILER_ENABLE_OPENCV "Enable OPENCV" OFF)
 set_option_(CHAINER_COMPILER_ENABLE_OPENMP "Enable OPENMP" OFF)
 set_option_(CHAINER_COMPILER_ENABLE_PYTHON "Enable PYTHON" OFF)
 set_option_(CHAINER_COMPILER_ENABLE_TVM    "Enable TVM" OFF)
+set_option_(CHAINER_COMPILER_ENABLE_TENSORRT "Enable TensorRT" OFF)
 set_option_(CHAINER_COMPILER_USE_SYSTEM_PROTOBUF "Use protobuf installed in the system" OFF)
 
 option(CHAINER_COMPILER_PREBUILT_CHAINERX_DIR "The path to prebuilt ChainerX" OFF)
@@ -251,6 +252,11 @@ if(${CHAINER_COMPILER_ENABLE_TVM})
   set(CHAINER_COMPILER_TVM_LIBRARIES tvm)
   set(CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES tvm_runtime)
   link_directories(AFTER ${CHAINER_COMPILER_TVM_LINK_DIRS})
+endif()
+
+if(${CHAINER_COMPILER_ENABLE_TENSORRT})
+  add_definitions(-DCHAINER_COMPILER_ENABLE_TENSORRT=1)
+  set(CHAINER_COMPILER_TENSORRT_LIBRARIES nvinfer nvonnxparser)
 endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/onnx ${CMAKE_CURRENT_BINARY_DIR}/third_party/onnx)
