--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -81,6 +81,7 @@ add_library(chainer_compiler_compiler
   fusion_elementwise.cc
   fusion_ngraph.cc
   fusion_snpe.cc
+  fusion_tensorrt.cc
   fusion_tvm.cc
   ${CMAKE_CURRENT_BINARY_DIR}/gen_node_base.cc
   ${CMAKE_CURRENT_BINARY_DIR}/gen_chxvm_codegen.cc
