--- a/compiler/CMakeLists.txt
+++ b/compiler/CMakeLists.txt
@@ -160,6 +160,7 @@ target_link_libraries(chainer_compiler_compiler_test
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   ${CHAINER_COMPILER_SNPE_LIBRARIES}
+  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
   absl::variant
   absl::optional
   )
