--- a/runtime/CMakeLists.txt
+++ b/runtime/CMakeLists.txt
@@ -98,6 +98,7 @@ target_link_libraries(chainer_compiler_runtime_test
   ${CHAINER_COMPILER_TVM_RUNTIME_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   ${CHAINER_COMPILER_SNPE_LIBRARIES}
+  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
   absl::variant
   absl::optional
   )
