--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -46,6 +46,7 @@ target_link_libraries(dump
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   ${CHAINER_COMPILER_SNPE_LIBRARIES}
+  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
   ${OpenCV_LIBS}
   absl::variant
   absl::optional
@@ -80,6 +81,7 @@ target_link_libraries(run_onnx
   ${CHAINER_COMPILER_TVM_LIBRARIES}
   ${CHAINER_COMPILER_CUDA_LIBRARIES}
   ${CHAINER_COMPILER_SNPE_LIBRARIES}
+  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
   absl::variant
   absl::optional
   )
@@ -119,6 +121,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${CHAINER_COMPILER_SNPE_LIBRARIES}
+    ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
     ${OpenCV_LIBS}
     absl::variant
     absl::optional
@@ -151,6 +154,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     ${CHAINER_COMPILER_TVM_LIBRARIES}
     ${CHAINER_COMPILER_CUDA_LIBRARIES}
     ${CHAINER_COMPILER_SNPE_LIBRARIES}
+    ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
     absl::variant
     absl::optional
     )
@@ -183,6 +187,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       ${CHAINER_COMPILER_TVM_LIBRARIES}
       ${CHAINER_COMPILER_CUDA_LIBRARIES}
       ${CHAINER_COMPILER_SNPE_LIBRARIES}
+      ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
       ${OpenCV_LIBS}
       absl::variant
       absl::optional
