--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,13 @@ language: cpp
 dist: xenial
 
 cache:
-  - ccache
-  - pip
+  ccache: true
+  pip: true
+  directories:
+    - $HOME/dist-chainer
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3 python3-pip python3-setuptools cmake libopenblas-dev
-  - sudo pip3 install gast numpy pytest chainercv packaging
 
 before_script:
   - export -f travis_nanoseconds
