Unify dependency libraries to the variable

--- a/menoh/CMakeLists.txt
+++ b/menoh/CMakeLists.txt
@@ -35,20 +35,7 @@ target_link_libraries(menoh_chainer_compiler
   chainer_compiler_configs
   chainer_compiler_runtime
   chainer_compiler_common
-  ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
-  onnx
-  onnx_proto
-  ${PROTOBUF_LIBRARY}
-  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
-  ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
-  ${CHAINER_COMPILER_DLDT_LIBRARIES}
-  ${CHAINER_COMPILER_TVM_LIBRARIES}
-  ${CHAINER_COMPILER_CUDA_LIBRARIES}
-  ${CHAINER_COMPILER_SNPE_LIBRARIES}
-  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
-  absl::variant
-  absl::optional
-  )
+  ${CHAINER_COMPILER_DEPENDENCY_LIBRARIES})
 
 if(OpenCV_FOUND)
     add_custom_command(
