--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -261,6 +261,23 @@ endif()
 
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/third_party/onnx ${CMAKE_CURRENT_BINARY_DIR}/third_party/onnx)
 
+set(CHAINER_COMPILER_DEPENDENCY_LIBRARIES
+  ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
+  onnx
+  onnx_proto
+  ${PROTOBUF_LIBRARY}
+  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
+  ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
+  ${CHAINER_COMPILER_DLDT_LIBRARIES}
+  ${CHAINER_COMPILER_TVM_LIBRARIES}
+  ${CHAINER_COMPILER_CUDA_LIBRARIES}
+  ${CHAINER_COMPILER_SNPE_LIBRARIES}
+  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
+  absl::variant
+  absl::optional
+  ${OpenCV_LIBS}
+  )
+
 add_custom_target(large_tests)
 
 if(${CHAINER_COMPILER_ENABLE_PYTHON})
