--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -30,27 +30,12 @@ set_hidden_(chainer_compiler_tools)
 
 add_executable(dump dump.cc)
 target_link_libraries(dump
-  onnx_proto
   chainer_compiler_tools
   chainer_compiler_compiler
   chainer_compiler_configs
   chainer_compiler_runtime
   chainer_compiler_common
-  ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
-  onnx
-  onnx_proto
-  ${PROTOBUF_LIBRARY}
-  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
-  ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
-  ${CHAINER_COMPILER_DLDT_LIBRARIES}
-  ${CHAINER_COMPILER_TVM_LIBRARIES}
-  ${CHAINER_COMPILER_CUDA_LIBRARIES}
-  ${CHAINER_COMPILER_SNPE_LIBRARIES}
-  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
-  ${OpenCV_LIBS}
-  absl::variant
-  absl::optional
-  )
+  ${CHAINER_COMPILER_DEPENDENCY_LIBRARIES})
 
 set_target_properties(dump PROPERTIES OUTPUT_NAME "dump")
 
@@ -71,20 +56,7 @@ target_link_libraries(run_onnx
   chainer_compiler_configs
   chainer_compiler_runtime
   chainer_compiler_common
-  ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
-  onnx
-  onnx_proto
-  ${PROTOBUF_LIBRARY}
-  ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
-  ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
-  ${CHAINER_COMPILER_DLDT_LIBRARIES}
-  ${CHAINER_COMPILER_TVM_LIBRARIES}
-  ${CHAINER_COMPILER_CUDA_LIBRARIES}
-  ${CHAINER_COMPILER_SNPE_LIBRARIES}
-  ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
-  absl::variant
-  absl::optional
-  )
+  ${CHAINER_COMPILER_DEPENDENCY_LIBRARIES})
 
 set_target_properties(run_onnx PROPERTIES OUTPUT_NAME "run_onnx")
 
@@ -111,21 +83,7 @@ if(${CHAINER_COMPILER_ENABLE_OPENCV})
     chainer_compiler_runtime
     chainer_compiler_common
     feeder
-    ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
-    onnx
-    onnx_proto
-    ${PROTOBUF_LIBRARY}
-    ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
-    ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
-    ${CHAINER_COMPILER_DLDT_LIBRARIES}
-    ${CHAINER_COMPILER_TVM_LIBRARIES}
-    ${CHAINER_COMPILER_CUDA_LIBRARIES}
-    ${CHAINER_COMPILER_SNPE_LIBRARIES}
-    ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
-    ${OpenCV_LIBS}
-    absl::variant
-    absl::optional
-    )
+    ${CHAINER_COMPILER_DEPENDENCY_LIBRARIES})
 
   set_target_properties(train_imagenet PROPERTIES OUTPUT_NAME "train_imagenet")
 endif()
@@ -144,20 +102,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
     chainer_compiler_configs
     chainer_compiler_runtime
     chainer_compiler_common
-    ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
-    onnx
-    onnx_proto
-    ${PROTOBUF_LIBRARY}
-    ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
-    ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
-    ${CHAINER_COMPILER_DLDT_LIBRARIES}
-    ${CHAINER_COMPILER_TVM_LIBRARIES}
-    ${CHAINER_COMPILER_CUDA_LIBRARIES}
-    ${CHAINER_COMPILER_SNPE_LIBRARIES}
-    ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
-    absl::variant
-    absl::optional
-    )
+    ${CHAINER_COMPILER_DEPENDENCY_LIBRARIES})
 
   set_target_properties(run_onnx_core.so
     PROPERTIES
@@ -177,21 +122,7 @@ if (${CHAINER_COMPILER_ENABLE_PYTHON})
       chainer_compiler_runtime
       chainer_compiler_common
       feeder
-      ${CHAINER_COMPILER_CHAINERX_LIBRARIES}
-      onnx
-      onnx_proto
-      ${PROTOBUF_LIBRARY}
-      ${CHAINER_COMPILER_PTHREAD_LIBRARIES}
-      ${CHAINER_COMPILER_NGRAPH_LIBRARIES}
-      ${CHAINER_COMPILER_DLDT_LIBRARIES}
-      ${CHAINER_COMPILER_TVM_LIBRARIES}
-      ${CHAINER_COMPILER_CUDA_LIBRARIES}
-      ${CHAINER_COMPILER_SNPE_LIBRARIES}
-      ${CHAINER_COMPILER_TENSORRT_LIBRARIES}
-      ${OpenCV_LIBS}
-      absl::variant
-      absl::optional
-      )
+      ${CHAINER_COMPILER_DEPENDENCY_LIBRARIES})
 
     set_target_properties(train_imagenet_core.so
       PROPERTIES
