--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,8 @@ cache:
 
 before_install:
   - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3 python3-pip python3-setuptools cmake libopenblas-dev
-  - sudo pip3 install gast numpy pytest chainercv packaging
+  # TODO(take-cheeze): Update gast to 0.3.x
+  - sudo pip3 install gast==0.2.2 numpy pytest chainercv packaging
 
 before_script:
   - export -f travis_nanoseconds
