Install libnvonnxparsers-dev too

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -164,7 +164,8 @@ RUN apt-get update -y && \
     sudo \
     ninja-build \
     libopencv-dev \
-    libnvinfer-dev && \
+    libnvinfer-dev \
+    libnvonnxparsers-dev && \
     rm -rf /var/lib/apt/lists/* /var/cache/apt/archives/*
 RUN echo deb http://apt.llvm.org/xenial/ llvm-toolchain-xenial-6.0 main \
     >> /etc/apt/sources.list.d/llvm.list && \
