--- a/.travis.yml
+++ b/.travis.yml
@@ -8,24 +8,36 @@ cache:
   directories:
     - $HOME/dist-chainer
 
-before_install:
-  - sudo apt-get install -y --no-install-recommends libprotobuf-dev protobuf-compiler libopencv-dev python3 python3-pip python3-setuptools cmake libopenblas-dev
-
 before_script:
   - export -f travis_nanoseconds
   - export -f travis_fold
   - export -f travis_time_start
   - export -f travis_time_finish
 
-script:
-  - bash ./scripts/run-travis-tests.sh
-
-addons:
-  apt:
-    update: true
-
 env:
   - CHAINER_BUILD_CHAINERX=1 MAKEFLAGS=-j2
+
+matrix:
+  include:
+    - name: Ubuntu16.04
+      dist: xenial
+      before_install:
+        - |
+          sudo apt-get install -y --no-install-recommends \
+            libprotobuf-dev protobuf-compiler libopencv-dev \
+            python3 python3-pip python3-setuptools \
+            cmake libopenblas-dev
+      script:
+        - bash ./scripts/run-travis-tests.sh
+      addons:
+        apt:
+          update: true
+    - name: macOS
+      os: osx
+      before_install:
+        - echo hoge
+      script:
+        - echo foo
 
 notifications:
   slack:
